<resources>
    <string name="app_name">FoodMenu</string>
    <string name="hamburger">漢堡</string>
    <string name="french_fries">薯條</string>
    <string name="cola">可樂</string>
    <string name="corn_soup">玉米濃湯</string>
    <string name="order">訂購</string>
    <string name="hint_to_user">請訂餐</string>
    <string name="fried_chicken" >雞塊</string>
    <string name="coffee">咖啡</string>
    <string name="salad">沙拉</string>
    <string name="apple_pie">蘋果派</string>
    <string name="word_type" >小字型</string>
</resources>
