<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/friedChicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/fried_chicken"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cola"
        app:layout_constraintTop_toBottomOf="@+id/cola"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/coffee"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/friedChicken"
        app:layout_constraintTop_toBottomOf="@+id/friedChicken" />

    <CheckBox
        android:id="@+id/hamburger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hamburger"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <CheckBox
        android:id="@+id/frenchFries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/french_fries"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/hamburger"
        app:layout_constraintTop_toTopOf="@+id/hamburger" />

    <CheckBox
        android:id="@+id/cola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/cola"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/hamburger"
        app:layout_constraintTop_toBottomOf="@+id/hamburger"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cornSoup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corn_soup"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/frenchFries"
        app:layout_constraintTop_toTopOf="@+id/cola" />

    <CheckBox
        android:id="@+id/salad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salad"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/cornSoup"
        app:layout_constraintTop_toTopOf="@+id/friedChicken" />

    <CheckBox
        android:id="@+id/applePie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apple_pie"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/salad"
        app:layout_constraintTop_toTopOf="@+id/coffee" />

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee"
        app:layout_constraintVertical_bias="0.164" />

    <ScrollView
        android:id="@+id/resultScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/orderBtn"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="@+id/orderBtn"
        app:layout_constraintTop_toBottomOf="@+id/orderBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_to_user"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>